package com.spiritlight.mobkilltracker.v3.events;

import com.spiritlight.mobkilltracker.v3.utils.minecraft.Message;

public class TotemEvent {
    public TotemEvent() {
        Message.debugv("Constructing TotemEvent");
    }
}
