package com.spiritlight.mobkilltracker.v3.mixin;

import com.spiritlight.mobkilltracker.v3.events.EventHandler;
import net.minecraft.client.gui.hud.ChatHud;
import net.minecraft.text.Text;
import org.spongepowered.asm.mixin.Mixin;
import org.spongepowered.asm.mixin.injection.At;
import org.spongepowered.asm.mixin.injection.Inject;
import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;

@Mixin(ChatHud.class)
public class ChatHudMixin {

    @Inject(method = "addMessage(Lnet/minecraft/text/Text;)V", at = @At("HEAD"))
    private void onAddMessage(Text message, CallbackInfo ci) {
        String text = message.getString();
        System.out.println("[MKT-MIXIN] Chat message: " + text);
        EventHandler.onMessageReceived(text);
    }
}
